modules/gdscript/tests/scripts/analyzer/errors/nullable_for_on_identifier.gd
func test():
    var nullable_array: Array? = []
    for element in nullable_array: # Should error
        print(element)